@@ -4546,6 +4546,11 @@ records:
     classUri: fdri:TimeSeriesDataset
     shortCode: TimeSeriesDataset
     properties:
+      methodology:
+        propertyUri: fdri:methodology
+        kind: object
+        constraints:
+          - record: TimeSeriesPlan
       dependsOn:
         label:
           - value: depends on
@@ -4707,6 +4712,18 @@ records:
         repeatable: false
         constraints:
           - record: DataProcessingConfiguration
+      rawConfiguration:
+        label:
+          - value: raw configuration
+            lang: en
+        description:
+          - value: |
+              A JSON representation of the raw configuration used by the data processing system to implement this plan.
+            lang: en
+        propertyUri: fdri:rawConfiguration
+        kind: literal
+        constraints:
+          - datatype: xsd:string
   Unit:
     label:
       - value: Unit Of Measure
