@@ -40,6 +40,8 @@ DRAFT 0.5
 * NON-BREAKIMG: Relax definition of `TimeSeriesDataset` to make the `type` property optional in the schema.
 * NON-BREAKING: Add optional `fdri:hasStructuredValue` property to `fdri:ConfigurationArgument` to cover the case where the value of an argument is a complex value consisting of a set of key-value pairs. Each key-value pair is represented as a separate fdri:ConfigurationArgument, allowing for further nesting of structured values if needed.
 * NON-BREAKING: Extend range of `fdri:uses` from `fdri:TimeSeriesDefinition` only, to `fdri:TimeSeriesDataset` or `fdri:TimeSeriesDefinition`.
+* NEW: Add `fdri:rawConfiguration` property to `fdri:TimeSeriesPlan` to record the JSON configuration for the plan.
+* NEW: Allow `fdri:methodology` on an `fdri:TimeSeriesDataset` to allow dataset-specific processing plans to be described.
 
 DRAFT 0.4.2
 -----------
